# ShadowFinder

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  ShadowFinderColab.ipynb  pyproject.toml  requirements.tox.txt  shadows.ipynb  timezone_grid.json  tox.ini
.github/workflows/: pypi-publish.yaml  pytest.yaml  tox.yaml
examples/: example_multi_shadow_find.py
shadowfinder/: cli.py  main.py  shadowfinder.py
src/shadowfinder/: __init__.py  __main__.py  cli.py  shadowfinder.py
tests/: test_executable.py  test_shadowfinder.py
