[tool.poetry]
name = "ShadowFinder"
version = "0.4.0"
description = "Find possible locations of shadows."
authors = ["Bellingcat"]
license = "MIT License"
readme = "README.md"
packages = [{ include = "shadowfinder", from = "src" }]
repository = "https://github.com/bellingcat/ShadowFinder"
classifiers = [
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Visualization",
]
keywords=["shadow", "finder", "locator", "map"]

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/bellingcat/ShadowFinder/issues"

[tool.poetry.scripts]
shadowfinder = "shadowfinder.__main__:main"

[tool.poetry.dependencies]
python =  ">=3.9,<3.13"
matplotlib = "^3.8"
basemap = "^1.4"
suncalc = "^0.1.3"
fire = "^0.5"
timezonefinder = "^6.5"
pandas = "^2.2"
numpy = "^1"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
black = "24.2.0"
pre-commit = "^3.7.1"
tox = "^4.15.1"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
